mainTemplate.json
{
	"$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"metadata": {
		"_generator": {
			"name": "bicep",
			"version": "0.34.1.11899",
			"templateHash": "6608977399677963554"
		}
	},
	"parameters": {
        "vmInstanceName": {
            "type": "string",
            "metadata": {
                "description": "The VM name"
            }
        },
        "vmSize": {
            "type": "string",
            "metadata": {
                "description": "Select the VM size"
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Select the Azure region for the resources"
            }
        },
		"adminUsername": {
			"type": "string",
			"defaultValue": "jwdillonAdmin",
			"metadata": {
			"description": "Admin username for the VM"
			}
		}
	},
	"variables": {
		"adminUsername": "[parameters('adminUsername')]",
		"planInfo": {
            "planID": "verametrics_engine_vm_plan",
            "offerID": "verametrics_engine",
            "publisher": "jwdillon_com"
        },
		"networkSecurityGroupName": "[format('{0}-nsg', parameters('vmInstanceName'))]",
		"publicIPAddressName": "[format('{0}-pip', toLower(parameters('vmInstanceName')))]",
		"networkInterfaceName": "[format('{0}-nic', parameters('vmInstanceName'))]",
		"virtualNetworkName": "[format('{0}-vnet', parameters('vmInstanceName'))]",
		"subnetName": "[format('{0}-subnet', parameters('vmInstanceName'))]",
		"vmName": "[format('{0}-vm', parameters('vmInstanceName'))]",
		"subnetAddressPrefix": "10.1.0.0/24",
		"addressPrefix": "10.1.0.0/16",
		"securityType": "Standard",
		"osDiskType": "Standard_LRS",
		"securityProfileJson": {
			"uefiSettings": {
				"secureBootEnabled": true,
				"vTpmEnabled": true
			},
			"securityType": "[variables('securityType')]"
		}
		// "extensionName": "GuestAttestation",
		// "extensionPublisher": "Microsoft.Azure.Security.LinuxAttestation",
		// "extensionVersion": "1.0",
		// "maaTenantName": "GuestAttestation",
		// "maaEndpoint": "[substring('emptystring', 0, 0)]"
	},
	"resources": [
		{
			"type": "Microsoft.Network/networkInterfaces",
			"apiVersion": "2023-09-01",
			"name": "[variables('networkInterfaceName')]",
			"location": "[parameters('location')]",
			"properties": {
				"ipConfigurations": [
					{
						"name": "ipconfig1",
						"properties": {
							"subnet": {
								"id": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName')), '2023-09-01').subnets[0].id]"
							},
							"privateIPAllocationMethod": "Dynamic",
							"publicIPAddress": {
								"id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]"
							}
						}
					}
				],
				"networkSecurityGroup": {
					"id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
				}
			},
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]",
				"[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]",
				"[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]"
			]
		},
		{
			"type": "Microsoft.Network/networkSecurityGroups",
			"apiVersion": "2024-05-01",
			"name": "[variables('networkSecurityGroupName')]",
			"location": "[parameters('location')]",
			"properties": {
				"securityRules": [
					{
						"name": "AllowFlaskInbound",
						"properties": {
							"priority": 101,
							"direction": "Inbound",
							"access": "Allow",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "443",
							"sourceAddressPrefix": "Internet",
							"destinationAddressPrefix": "*"
						}
					},
					{
						"name": "DenyRDPInboundFromInternet",
						"properties": {
							"priority": 1000,
							"direction": "Inbound",
							"access": "Deny",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "3389",
							"sourceAddressPrefix": "Internet",
							"destinationAddressPrefix": "*"
						}
					},
					{
						"name": "DenySSHInboundFromInternet",
						"properties": {
							"priority": 1001,
							"direction": "Inbound",
							"access": "Deny",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "22",
							"sourceAddressPrefix": "Internet",
							"destinationAddressPrefix": "*"
						}
					}
				]
			}
		},
		{
			"type": "Microsoft.Network/virtualNetworks",
			"apiVersion": "2023-09-01",
			"name": "[variables('virtualNetworkName')]",
			"location": "[parameters('location')]",
			"properties": {
				"addressSpace": {
					"addressPrefixes": [
						"[variables('addressPrefix')]"
					]
				},
				"subnets": [
					{
						"name": "[variables('subnetName')]",
						"properties": {
							"networkSecurityGroup": {
								"id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
							},
							"addressPrefix": "[variables('subnetAddressPrefix')]",
							"privateEndpointNetworkPolicies": "Enabled",
							"privateLinkServiceNetworkPolicies": "Enabled"
						}
					}
				]
			},
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
			]
		},
		{
			"type": "Microsoft.Network/publicIPAddresses",
			"apiVersion": "2023-09-01",
			"name": "[variables('publicIPAddressName')]",
			"location": "[parameters('location')]",
			"sku": {
				"name": "Standard"
			},
			"properties": {
				"publicIPAllocationMethod": "Static",
				"publicIPAddressVersion": "IPv4",
				"dnsSettings": {
					"domainNameLabel": "[variables('publicIPAddressName')]"
				},
				"idleTimeoutInMinutes": 4
			}
		},
		{
			"type": "Microsoft.Compute/virtualMachines",
			"apiVersion": "2023-09-01",
			"name": "[variables('vmName')]",
			"location": "[parameters('location')]",
			"plan": {
                "name": "[variables('planInfo').planID]",
                "product": "[variables('planInfo').offerID]",
                "publisher": "[variables('planInfo').publisher]"
            },
			"properties": {
				"hardwareProfile": {
					"vmSize": "[parameters('vmSize')]"
				},
                "storageProfile": {
                    "imageReference": {
                        "offer": "[variables('planInfo').offerID]",
                        "publisher": "[variables('planInfo').publisher]",
                        "sku": "[variables('planInfo').planID]",
                        "version": "latest"
                    },
                    "osdisk": {
                        "name": "[concat(variables('vmName'), '-osDisk')]",
                        "createOption": "FromImage",
                        "managedDisk": {
                           	"storageAccountType": "[variables('osDiskType')]"
                        },
                        "caching": "ReadWrite"
                    }
                },
				"osProfile": {
					"computerName": "[variables('vmName')]",
					"adminUsername": "[variables('adminUsername')]",
					"linuxConfiguration": {
						"disablePasswordAuthentication": true,
						"ssh": {
							"publicKeys": [
								{
									"path": "[format('/home/{0}/.ssh/authorized_keys', variables('adminUsername'))]",
									"keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC7laRyN4B3YZmVrDEZLZoIuDep9OtVwikHFQMmkjdgBsOI9P6j3CJEw7W9Z3QtR5N8JkZKwVQRHE5LlO9XP6w5Y4yF4i4X2z7qKJGNjHr2mY+9YRt4L6yOyQa6Zl7F placeholder-key-replaced-by-script"
								}
							]
						}
					}
				},
				"networkProfile": {
					"networkInterfaces": [
						{
							"id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
						}
					]
				},
				"securityProfile": "[if(equals(variables('securityType'), 'TrustedLaunch'), variables('securityProfileJson'), null())]"
			},
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
			]
		},
		
		{
			"type": "Microsoft.Compute/virtualMachines/extensions",
			"apiVersion": "2023-09-01",
			"name": "[format('{0}/{1}', variables('vmName'), 'SSHSetupScript')]",
			"location": "[parameters('location')]",
			"properties": {
				"publisher": "Microsoft.Azure.Extensions",
				"type": "CustomScript",
				"typeHandlerVersion": "2.1",
				"autoUpgradeMinorVersion": true,
				"settings": {
					"commandToExecute": "[concat('bash -c \"', base64ToString('CiMhL2Jpbi9iYXNoCgojIHRoaXMgc2NyaXB0IGlzIHVzZWQgdG8gc2V0dXAgdGhlIHNzaCBhY2Nlc3MgZm9yIHRoZSBhZG1pbiB1c2VyCiMgaXQgaXMgcnVuIGluc2lkZSB0aGUgbWFpblRlbXBsYXRlLmpzb24gZmlsZSwgYmFzZTY0IGVuY29kZWQKIyBtaWNyb3NvZnQgcmVxdWlyZXMgc3NoIHVpZDpwd2QgYXV0aCB0byBiZSBlbmFibGVkIHdoZW4gY3JlYXRpZyBmcm9tIGEgdGVtcGxhdGUKIyB0aGlzIHNjcmlwdCBkaXNhYmxlcyBpdCBhbmQgc2V0cyB1cCBzc2gga2V5IGF1dGgKIyBpdCBhbHNvIGNoYW5nZXMgdGhlIG93bmVyc2hpcCBvZiB0aGUgZmxhc2sgYXBwIHRvIHRo [...]
				}
			},
			"dependsOn": [
				"[resourceId('Microsoft.Compute/virtualMachines', variables('vmName'))]"
			]
		}
	],
	"outputs": {
		"hostname": {
			"type": "string",
			"value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName')), '2023-09-01').dnsSettings.fqdn]"
		}
	}
}
